--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,6 +70,11 @@ jobs:
         run: flutter build apk --debug
         continue-on-error: true
 
+      - name: Setup Node.js
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
+        with:
+          node-version: "22"
+
       - name: Install GitHub Copilot CLI
         run: |
           npm install -g @github/copilot
